styles/index.css
/* ... */
.fw-300 {
    font-weight: 300;
}

.fw-400 {
    font-weight: 400;
}

.fw-500 {
    font-weight: 500;
}

.fw-600 {
    font-weight: 600;
}

.fw-700 {
    font-weight: 700;
}

.fw-800 {
    font-weight: 800;
}

.fw-900 {
    font-weight: 900;
}

/* Sections */

#contact, #web-solutions, #gallery {
    scroll-margin-top: 5rem; 
    scroll-behavior: smooth;
}

/* header */

.main-navigation {
    --gap: clamp(3rem, 5vw, 30rem);

    position: fixed;
    z-index: 250;
    align-items: center;
    width: 100%;
    height: 5rem;
    padding-inline: clamp(3rem, 8vw, 30rem);
    margin: 0;
    background-color: hsl(var(--clr-dark));
}

.contact-nav {
    padding: 0.5rem 1rem;
    background-color: hsl(var(--clr-blue));
    border-radius: 20px;
    transition: background-color 250ms ease-in-out;
}

.main-navigation>* a:where(:not(.contact-nav)) {
    padding: 1rem 0;
}

.contact-nav:hover,
.main-navigation li:last-child[aria-selected="true"] a {
    background-color: hsl(var(--clr-white));
}

.main-navigation>*:last-child {
    padding-top: 5px;
    margin-left: auto;
}

.main-navigation>*::after {
    display: block;
    width: 100%;
    height: 2px;
    margin-top: 0.5rem;
    content: '';
    background-color: hsl(var(--clr-white));
    opacity: var(--underline-visible, 0);
    transition: opacity 150ms ease-in-out;
}

.main-navigation > *:where(:not(:last-child)):hover,
.main-navigation > *:where(:not(:last-child))[aria-selected="true"] {
    --underline-visible: 1;
}

.mobile-nav-toggle {
    display: none;
}

@media (width <=45em) {
    header {
        padding: 3rem;
    }

    .main-navigation {
        position: fixed;
        inset: 0 0 0 30%;
        z-index: 1000;
        padding: min(20rem, 15vh) 2rem;
        margin: 0;
        background-color: hsl(var(--clr-dark)/90%);
        backdrop-filter: blur(4px);
        transition: transform 500ms ease-in-out;
        transform: translateX(var(--translatex-primary-navigation, 100%));

        --flex-direction: column;
    }

    .main-navigation a {
        display: flex;
    }

    .mobile-nav-toggle {
        position: absolute;
        top: 2rem;
        right: 1.5rem;
        z-index: 2000;
        display: block;
        width: 1.5rem;
        aspect-ratio: 1;
        background: transparent;
        background-image: url("../assets/icons/icon-hamburger.svg");
        background-repeat: no-repeat;
        border: 0;
        transition: background-image 100ms ease-in-out;
    }

    .mobile-nav-toggle[aria-expanded="true"] {
        background-image: url("../assets/icons/icon-close.svg");
    }

    .main-navigation>li:last-child {
        margin-left: unset;
    }

    .slider {
        --slider-scroll-translation: -300%;

        height: 70px !important;
    }

    .slider-text-wrapper {
        height: 70px !important;
    }

}

#main-navigation[data-visible="true"] {
    transform: translateX(0%);
}

/* Hero */

.scroll-up {
    position: fixed;
    right: 3rem;
    bottom: 3rem;
    z-index: 1000;
    width: 32px;
    height: 32px;
    background: transparent;
    background-image: url("../assets/icons/scroll-up.png");
    filter: invert(100%);
    background-repeat: no-repeat;
    background-size: contain;
    opacity:0;
    transition: opacity 250ms ease-in-out;
    transform: translateX(5rem);
}

.scroll-up.show {
    display: block;
    opacity: 0.5;
    transform: translateX(0);
}

.scroll-up.show:hover {
    opacity: 1;
}


.intro h1 {
    margin: 0;
    line-height: 1;
}

.cta-hero {
    padding: 1rem 2rem;
    color: hsl(var(--clr-white));
    text-decoration: none;
    cursor: pointer;
    background-color: transparent;
    border: 2px solid hsl(var(--clr-white)/ 20%);
    border-radius: 10px;
    transition: background-color 500ms ease-in-out;
}

.cta-hero::after {
    display: inline-block;
    height: 20px;
    aspect-ratio: 1;
    margin-left: 1rem;
    vertical-align: middle;
    content: '';
    background-image: url("../assets/icons/arrow-right.svg");
    filter: invert(var(--cta-hero-invert, 100%));
    background-repeat: no-repeat;
    background-size: contain;
}


.cta-hero:hover {
    color: hsl(var(--clr-dark));
    background-color: hsl(var(--clr-white));

    --cta-hero-invert: 0%;
}

/* slider */

.slider-container {
    position: relative;
    width: 98vw;
    padding: 4rem 0;
    margin-inline: auto;
    overflow: hidden;
    background-color: hsl(var(--clr-gray));
    transition: filter 500ms ease-in-out;
}

.slider {
    display: flex;
    gap: 25vw;
    height: 100px;
    transition: animation 200ms linear infinite;
    animation: slider-scroll 15s linear infinite;
}

.slide {
    width: 250px;
    transition: animation 200ms ease-in-out;
}

.slide img {
    max-width: unset;
    height: 100%;
    transition: transform 100ms ease-in-out;
}

.slide img:hover {
    transform: scale(1.25);
}

.slider-text-wrapper {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100px;
    animation: slider-text-opacity 15s linear infinite;
    
}

.slider-text-wrapper p::before {
    position: absolute;
    width: calc(100% + 2em);
    height: 100%;
    content: "";
    background-color: hsl(var(--clr-gray));
    animation: slider-text-reveal 15s infinite linear;
    
}

.slider-text {
    margin: 0;
    color: hsl(var(--clr-white) / 90%);
}

@keyframes slider-scroll {
    0% {
        transform: translateX(0%);
    }

    70% {
        opacity: 1;
        transform: translateX(var(--slider-scroll-translation, -80%));
    }

    75%, 100% {
        opacity: 0;
    }
}

@keyframes slider-text-reveal {
    0% {
        opacity: 0;
    }

    70%, 75% {
        opacity: 1;
        transform: translate(0);
    }

    95% {
        opacity: 1;
    }

    100% {
        opacity: 0;
        transform: translate(80%);
    }
}
/* ... */

